Main layout responsive to smaller widths

--- a/src/app/components/navigation/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation/navigation.component.scss
@@ -8,7 +8,7 @@ a{
     color: unset;
 }
 .bgnd-secondary{
-    background-color: s.$dark_purple;
+    // background-color: s.$dark_purple;
     color: white;
     font-weight: 500;
     height: 100%;
