--- a/src/app/components/shows-container/shows-container.component.scss
+++ b/src/app/components/shows-container/shows-container.component.scss
@@ -3,6 +3,7 @@
 :host{
 	background-color: s.$dark_purple;
     border: 1px solid black;
+    box-sizing: border-box;
     display: inline-block;
 }
 
