--- a/src/app/components/show-card/show-card.component.scss
+++ b/src/app/components/show-card/show-card.component.scss
@@ -6,6 +6,7 @@
     max-width: max-content;
     width: max-content;
     max-width: 100%;
+    width: 100%;
     height: 100%;
     //margin:10%; //Ne radi sa 10%...
     box-sizing: border-box;
