--- a/src/app/layouts/main-layout/main-layout.component.scss
+++ b/src/app/layouts/main-layout/main-layout.component.scss
@@ -12,7 +12,8 @@
         top: 0%;
         width: 75%;
         max-width: 75vw;
-        height: 100%;
+        height: fit-content;
+        min-height: 100%;
     }
     
     .navigationWrapper{
