--- a/src/app/layouts/auth-layout/auth-layout.component.scss
+++ b/src/app/layouts/auth-layout/auth-layout.component.scss
@@ -11,3 +11,9 @@
     align-items: center;
     height: 100%;
 }
+
+@media screen and (max-width: 800px) {
+    .bgnd{
+        background-color: s.$purple;
+    }
+}
