--- a/src/app/pages/register/register.component.scss
+++ b/src/app/pages/register/register.component.scss
@@ -48,3 +48,11 @@ button[type="submit"]{
         color: s.$error;
     }
 }
+
+
+@media screen and (max-width: 800px) {
+    .mat-card.card{
+        background-color: s.$purple;
+        box-shadow: none;
+    }
+}
