Added title for printing

--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,3 +1,4 @@
+<p class="showsAppPrint">TV Shows App</p>
 <div class="topRibbon">
 	<a [routerLink]="'/'">
 		<img class="logo" [src]="logoImgUrl" />
