--- a/src/app/components/single-review/single-review.component.html
+++ b/src/app/components/single-review/single-review.component.html
@@ -10,7 +10,7 @@
 		</ng-template>
 	</div>
 	<div class="flexBetween">
-		<div>{{ review!.user.email }}</div>
+		<div>{{ review!.user!.email }}</div>
 		<div class="scoreContainer">
 			<div class="reviewScore numberRating">{{ review!.rating }}/5</div>
 			<div class="starsContainer">
