--- a/src/app/components/reviews/reviews.component.html
+++ b/src/app/components/reviews/reviews.component.html
@@ -35,7 +35,11 @@
 	</form>
 	<ul class="reviewsList" *ngIf="reviews?.length !== 0">
 		<li *ngFor="let review of reviews">
-			<app-single-review [review]="review"></app-single-review>
+			<app-single-review
+				[review]="review"
+				[currentUser]="user"
+				(deletedReview)="deletedReview($event)"
+			></app-single-review>
 		</li>
 	</ul>
 </div>
