--- a/src/app/components/single-review/single-review.component.html
+++ b/src/app/components/single-review/single-review.component.html
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 	<p>{{ review!.comment }}</p>
-	<div class="deleteIconDiv verticallyCentered">
+	<div class="deleteIconDiv verticallyCentered" *ngIf="currentUser?.id === review?.user?.id">
 		<mat-icon class="deleteIcon" (click)="onDeleteButtonClick($event)">delete_outline</mat-icon>
 		<!-- <img [src]="deleteIconPath" class="deleteIcon" (click)="onDeleteButtonClick($event)" /> -->
 	</div>
