Added initial file upload

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -2,19 +2,22 @@
 	<div class="content" *ngIf="user$ | async as user">
 		<p class="emailLabel">EMAIL</p>
 		<p class="emailText">{{ user.email }}</p>
-		<div class="dropPhoto" *ngIf="!user.image_url; else existingPhoto">
-			<div class="dropPhotoInner">
-				<mat-icon>tv</mat-icon>
-				<p>Drop your photo here</p>
-			</div>
-		</div>
-		<ng-template #existingPhoto>
-			<div class="existingPhoto">
-				<div class="existingPhotoInner">
-					<img class="image" [src]="user.image_url" />
-					<button mat-button>UPLOAD IMAGE</button>
+		<label for="photo-upload" class="photoWrapper" (drop)="onFileDrop($event)" (dragover)="onDragOver($event)">
+			<div class="dropPhoto" *ngIf="!user.image_url; else existingPhoto">
+				<div class="dropPhotoInner">
+					<mat-icon>tv</mat-icon>
+					<p>Drop your photo here</p>
 				</div>
 			</div>
-		</ng-template>
+			<ng-template #existingPhoto>
+				<div class="existingPhoto">
+					<div class="existingPhotoInner">
+						<img class="image" [src]="user.image_url" />
+						<button mat-button>UPLOAD IMAGE</button>
+					</div>
+				</div>
+			</ng-template>
+		</label>
+		<input type="file" id="photo-upload" (change)="onFileInputChange($event)" />
 	</div>
 </div>
