--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -3,21 +3,34 @@
 		<p class="emailLabel">EMAIL</p>
 		<p class="emailText">{{ user.email }}</p>
 		<label for="photo-upload" class="photoWrapper" (drop)="onFileDrop($event)" (dragover)="onDragOver($event)">
-			<div class="dropPhoto" *ngIf="!user.image_url; else existingPhoto">
-				<div class="dropPhotoInner">
-					<mat-icon>tv</mat-icon>
-					<p>Drop your photo here</p>
-				</div>
-			</div>
-			<ng-template #existingPhoto>
-				<div class="existingPhoto">
-					<div class="existingPhotoInner">
-						<img class="image" [src]="user.image_url" />
-						<button mat-button>UPLOAD IMAGE</button>
+			<div *ngIf="!selectedPhoto">
+				<div class="dropPhoto" *ngIf="!user.image_url; else existingPhoto">
+					<div class="dropPhotoInner">
+						<mat-icon>tv</mat-icon>
+						<p>Drop your photo here</p>
 					</div>
 				</div>
-			</ng-template>
+				<ng-template #existingPhoto>
+					<div class="existingPhoto">
+						<div class="existingPhotoInner">
+							<img class="image" [src]="user.image_url" />
+							<button mat-button>
+								<label for="photo-upload"> Select new image </label>
+							</button>
+						</div>
+					</div>
+				</ng-template>
+			</div>
+			<div *ngIf="selectedPhoto">
+				<div class="dropPhoto">
+					<div class="dropPhotoInner">
+						<mat-icon>image</mat-icon>
+						<p>Image selected</p>
+					</div>
+				</div>
+			</div>
 		</label>
 		<input type="file" id="photo-upload" (change)="onFileInputChange($event)" />
+		<button mat-button *ngIf="selectedPhoto" (click)="onUploadClick()">UPLOAD IMAGE</button>
 	</div>
 </div>
